k8s/base/infra/ostree/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: ostree
    app.kubernetes.io/name: ostree
  name: ostree-repo
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ostree
      app.kubernetes.io/name: ostree
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ostree
        app.kubernetes.io/name: ostree
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: caddy
          command:
            - caddy
          args:
            - "run"
            - "-watch"
            - "-config"
            - "/etc/caddy/Caddyfile"
          image: "docker.io/library/caddy:2.5.1"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 2019
              name: api
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            limits:
              memory: 750Mi
            requests:
              cpu: 100m
              memory: 100Mi
          startupProbe:
            failureThreshold: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /etc/caddy
              name: caddy-config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ostree-repo
        - name: caddy-config
          configMap:
            name: caddy
            items:
              - key: Caddyfile
                path: Caddyfile
                mode: 0644
