k8s/base/infra/ostree/service-metrics.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ostree
    app.kubernetes.io/name: ostree
  annotations:
    prometheus.io/port: "9113"
    prometheus.io/scrape: "true"
  name: ostree-metrics
  namespace: infra
spec:
  ports:
  - name: metrics
    port: 9113
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/instance: ostree
    app.kubernetes.io/name: ostree
  type: ClusterIP
