k8s/base/infra/ostree/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: ostree
    app.kubernetes.io/name: ostree
  name: ostree
  namespace: infra
spec:
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: api
      port: 2019
      targetPort: api
  selector:
    app.kubernetes.io/instance: ostree
    app.kubernetes.io/name: ostree
